--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.3",
     "bower": "^1.8.2",
     "express": "^4.16.3",
+        "google-scraper": "^1.1.2",
     "jquery": "^3.3.1",
     "mongodb": "^2.2.33",
     "mongojs": "^2.6.0",
